# todo_app

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml
config/nginx/conf.d/: default.conf
src/cybersmart_assessment/core/: asgi.py  config.py  urls.py  wsgi.py
src/cybersmart_assessment/core/settings/: default.py  testing.py
src/cybersmart_assessment/core/views/: __init__.py
src/cybersmart_assessment/system/: apps.py  document_store.py
src/cybersmart_assessment/system/celery/: app.py  signals.py  tasks.py
src/cybersmart_assessment/system/templates/: base.html
src/cybersmart_assessment/system/templates/_partials/: navbar.html
src/cybersmart_assessment/todo/: apps.py  colors.py  models.py  urls.py  utils.py
src/cybersmart_assessment/todo/forms/: __init__.py  create_form.py  edit_form.py
src/cybersmart_assessment/todo/static/todo/css/: task.css
src/cybersmart_assessment/todo/static/todo/js/: locations-dropdown.js
src/cybersmart_assessment/todo/templates/task/: edit.html  list.html
src/cybersmart_assessment/todo/templates/task/_partials/: task_list_item.html
src/cybersmart_assessment/todo/views/: __init__.py  create.py  edit.py  list.py  mark_as_active.py  mark_as_finished.py
src/todo_app/core/: asgi.py  urls.py  wsgi.py
src/todo_app/core/settings/: default.py  testing.py
src/todo_app/core/views/: __init__.py  homepage.py
src/todo_app/system/: apps.py
src/todo_app/system/celery/: app.py  signals.py  tasks.py  utils.py
src/todo_app/system/management/commands/: wait_for_database.py  wait_for_document_store.py
src/todo_app/system/templates/: base.html
src/todo_app/system/templates/_partials/: navbar.html
src/todo_app/todo/: apps.py  colors.py  models.py  urls.py  utils.py
src/todo_app/todo/forms/: __init__.py  create_form.py  edit_form.py
src/todo_app/todo/static/todo/js/: locations-dropdown.js
src/todo_app/todo/templates/task/: create.html  list.html
src/todo_app/todo/templates/task/_partials/: task_list_item.html
src/todo_app/todo/views/: __init__.py  create.py  edit.py  list.py  mark_as_active.py  mark_as_finished.py
tests/core/: test_config.py
tests/core/test_views/: test_homepage.py
tests/system/test_celery/: test_tasks.py  test_utils.py
tests/system/test_management/: test_wait_for_database.py  test_wait_for_document_store.py
tests/todo/: conftest.py  test_colors.py  test_models.py  test_utils.py
tests/todo/test_views/: test_create_view.py  test_edit_view.py  test_list_view.py  test_mark_as_active.py  test_mark_as_finished.py
